Enabler PSB henleggelse i q1 for testing